src/test/ui/for/for-loop-type-error.stderr
error[E0369]: binary operation `+` cannot be applied to type `()`
  --> $DIR/for-loop-type-error.rs:2:16
   |
LL |     let x = () + ();
   |             -- ^ -- ()
   |             |
   |             ()
   |
   = note: an implementation of `std::ops::Add` might be missing for `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
